// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Approvals ModalRuleRemove matches the snapshot for multiple approvers 1`] = `
<div
  title="Remove approvers?"
>
  <p>
    You are about to remove the 
    <strong>
      Lorem
    </strong>
     approver group which has 
    <strong>
      5 members
    </strong>
    . Approvals from these members are not revoked.
  </p>
</div>
`;

exports[`Approvals ModalRuleRemove matches the snapshot for singular approver 1`] = `
<div
  title="Remove approvers?"
>
  <p>
    You are about to remove the 
    <strong>
      Lorem
    </strong>
     approver group which has 
    <strong>
      1 member
    </strong>
    . Approvals from this member are not revoked.
  </p>
</div>
`;
